# chess_rs

./: Cargo.toml  Optimizations.md  README.md  opening_5_10_2_moves.txt
src/: lib.rs  main.rs
src/board/: bishop_magic.rs  board.rs  constants.rs  engine.rs  mod.rs  move_gen.rs  move_gen2.rs  openings.rs  pieces.rs  rook_magic.rs  test.rs  tt.rs  zobrist.rs
src/py/: epd_formatter.py  full_game_test.py  game.pgn  generate_opening_book.py  main.py  number_of_nodes.py  perft.py  test_best_move.py  test_game_state.py  test_move_generation.py
src/ts/: main.ts
