[package]
name = "chess"
version = "0.1.0"
edition = "2024"
autobins = false

[profile.release]
debug = true

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
tracing = "0.1.43"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.22"
smallvec = "1.13"

[profile.test]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "test_checkmate"
path = "src/bin/test_checkmate.rs"

[[bin]]
name = "minimax"
path = "src/bin/minimax.rs"

[[bin]]
name = "py_api"
path = "src/bin/py_api.rs"

[[bin]]
name = "magics"
path = "src/bin/test_magics.rs"

[[bin]]
name = "test_best_move"
path = "src/bin/test_best_move.rs"

[[bin]]
name = "engine_perft"
path = "src/bin/engine_perft.rs"

[[bin]]
name = "moves_generation_perft"
path = "src/bin/moves_generation_perft.rs"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"